--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="row";>
-        <h1 id="title">My Apps</h1>
+        <h1 id="title">Activity 1 App Development - Lague</h1>
     </div>
     <div class="row">
         <div class="col-4" style="background-color: rgb(122, 117, 118);">
